docs: add run method to README.md